--- a/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
+++ b/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
@@ -148,6 +148,55 @@
   </div>
   </div>
   
+
+  <div class="row">
+    <div class="col-sm-6">
+        <google-chart #chart style="display: inline-flex;"
+        [title]="titlePie"
+        [type]="typePie"
+        [data]="dataPie"
+        columnNames="columnNames"
+        [options]="options"
+
+        >
+      </google-chart>
+
+    </div>
+    <div class="col-sm-6">
+      <google-chart #chart style="display: inline-flex;"
+      [title]="titleBar"
+      [type]="typeBar"
+      [data]="dataPie"
+      [columnNames]="columnNames"
+      [options]="options"
+
+      >
+    </google-chart>
+
+  </div>
+  </div>
+
+  
+  <!-- <div class="row">
+    <div class="col text-center">
+        <google-chart #chart style="display: inline-flex;"
+        [title]="title"
+        [type]="type"
+        [data]="data"
+        columnNames="columnNames"
+        [options]="options"
+        width="400"
+        height="800"
+        >
+      </google-chart>
+
+    </div>
+  </div> -->
+
+
+
+
+
   <ng-template #contentDelete let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Proveedor {{selectedExpenses.supplierName}}</h4>
