--- a/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
+++ b/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
@@ -6,7 +6,8 @@
       <p>{{totalItems}} gastos encontrados</p>
     </div>
     <div class="col-sm-6">
-      <button class="btn btn-primary pull-right" (click)="openBatchLoad(contentUploadCFDI)" style="margin-left: 10px;">Cargar CFDI</button>
+      <!-- <button class="btn btn-primary pull-right" (click)="openBatchLoad(contentUploadCFDI)" style="margin-left: 10px;">Descarga</button> -->
+      <button class="btn btn-primary pull-right" (click)="openBatchLoad(contentUploadCFDI)" style="margin-left: 10px;">Agregar gasto</button>
       <button class="btn btn-danger pull-right" (click)="openDeleteAll(contentDeleteAll)" style="margin-left: 10px;">Borrar todo</button>
     </div>
   </div>
@@ -81,6 +82,7 @@
               <th>Impuestos</th>
               <th>Subtotal</th>
               <th>Total</th>
+              <th>CFDI</th>
               <th></th>
               <th></th>
             </tr>
@@ -94,6 +96,7 @@
               <td>{{e.taxes | currency}}</td>
               <td>{{e.subtotal | currency}}</td>
               <td>{{e.total | currency}}</td>
+              <td><i *ngIf="e.hasXML" class="fa fa-check" style="color: seagreen;"></i></td>
               <td><i class="fa fa-info" (click)="openInfo(contentInfo, i)"  aria-hidden="true" style="font-size:17px;"></i></td>
               <th><i class="fa fa-ban" (click)="openDelete(contentDelete, i)"  aria-hidden="true" style="font-size:17px;"></i></th>
             </tr>
@@ -160,57 +163,6 @@
   </div>
 </div>
   
-
-  <!-- <div class="row">
-    <div class="col text-center">
-        <google-chart #chart style="display: inline-flex;"
-        [title]="titlePie"
-        [type]="typePie"
-        [data]="dataPie"
-        columnNames="columnNames"
-        [options]="options"
-
-        >
-      </google-chart>
-
-    </div>
-  </div>
-  <div class="row">
-    <div class="col text-center">
-      <google-chart #chart  style="display: inline-flex;"
-      [title]="titleBar"
-      [type]="typeBar"
-      [data]="dataPie"
-      columnNames="columnNames"
-      [options]="options"
-
-      >
-    </google-chart>
-
-  </div>
-  </div> -->
-
-  
-  <!-- <div class="row">
-    <div class="col text-center">
-        <google-chart #chart style="display: inline-flex;"
-        [title]="title"
-        [type]="type"
-        [data]="data"
-        columnNames="columnNames"
-        [options]="options"
-        width="400"
-        height="800"
-        >
-      </google-chart>
-
-    </div>
-  </div> -->
-
-
-
-
-
   <ng-template #contentDelete let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Proveedor {{selectedExpenses.supplierName}}</h4>
