--- a/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
+++ b/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
@@ -6,8 +6,9 @@
       <p>{{totalItems}} gastos encontrados</p>
     </div>
     <div class="col-sm-6">
-      <!-- <button class="btn btn-primary pull-right" (click)="openBatchLoad(contentUploadCFDI)" style="margin-left: 10px;">Descarga</button> -->
+      
       <button class="btn btn-primary pull-right" (click)="openBatchLoad(contentUploadCFDI)" style="margin-left: 10px;">Agregar gasto</button>
+      <button class="btn btn-success pull-right" (click)="getExpenseItems()" style="margin-left: 10px;">Descarga</button>
       <button class="btn btn-danger pull-right" (click)="openDeleteAll(contentDeleteAll)" style="margin-left: 10px;">Borrar todo</button>
     </div>
   </div>
